# acki-nacki-igniter

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  clippy.toml  config-template.yaml  keys-template.yaml
chitchat/: Cargo.toml
chitchat/src/: digest.rs  failure_detector.rs  lib.rs  listener.rs  message.rs  server.rs
chitchat/src/transport/: channel.rs  mod.rs  udp.rs  utils.rs
chitchat/tests/: cluster_test.rs  perf_test.rs  transport_test.rs
docs/: Keys_generation.md  License_attachment.md  Manual_license_delegation.md
igniter/: Cargo.toml  build.rs
igniter/src/: api.rs  api_server.rs  cli.rs  config.rs  errors.rs  gossip.rs  lib.rs  licence_updater.rs  process.rs  revoked_license_watcher.rs  utils.rs
igniter/src/open_api/: routes.rs  server.rs
igniter/src/transport/: channel.rs  mod.rs  signed_message.rs  signed_quic.rs  signed_udp.rs
igniter/src/transport/quic/: incoming.rs  mod.rs  outgoing.rs
igniter/tests/: config-invalid-proxies.yaml  config-no-proxies.yaml  config.yaml  gossip_state_1.json  keys.yaml
telemetry_utils/: Cargo.toml
telemetry_utils/src/: lib.rs  mpsc.rs
transport-layer/: Cargo.toml
transport-layer/src/: lib.rs  server.rs
transport-layer/src/msquic/: mod.rs  pkcs12.rs  quic_settings.rs  tests.rs
transport-layer/src/msquic/msquic_async/: connection.rs  listener.rs
transport-layer/src/wtransport/: mod.rs
updater/: Cargo.toml
updater/src/: lib.rs
updater/tests/: docker_hub.rs
