[workspace]
members = [
    #
    "chitchat",
    "igniter",
    "updater",
]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
reqwest = { version = "*", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1.40"
