[workspace]
members = [
    #
    "chitchat",
    "igniter",
    "updater",
]
resolver = "3"

[workspace.package]
version = "0.2.1"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
base64 = { version = "0.22.1" }
hex = "0.4.3"
reqwest = { version = "*", default-features = false, features = ["blocking", "json", "rustls-tls"] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1.40"
