[package]
name = "acki-nacki-igniter"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-channel = "2.3.1"
async-trait = "0.1.85"
base64.workspace = true
chitchat = { path = "../chitchat" }
clap = { version = "4.5.2", features = ["derive", "env"] }
cool-id-generator = "1.0.1"
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core"] }
hex.workspace = true
lazy_static = "1.5.0"
poem = "3.0.0"
poem-openapi = { version = "5.1.5", features = ["swagger-ui"] }
rand = "0.8.5"
reqwest.workspace = true
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = { version = "0.9" }
shellexpand = { version = "3.1.0", features = ["path"] }
strum = { version = "0.26", features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
transport-layer.workspace = true
tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = "v2.9.1.an" }
updater = { path = "../updater" }
url = { version = "2.5.4", features = ["serde"] }

[features]
dev-mode = []
