[package]
name = "transport-layer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytes = { version = "1.10.1" }
futures.workspace = true
futures-io = "0.3.31"
hex = "0.4.3"
libc = { version = "0.2" }
msquic = { git = "https://github.com/gosh-sh/msquic.git", branch = "gosh", features = ["static"] }

cbc = { version = "^0.1", features = ["block-padding"] }
cipher = { version = "^0.4.2", features = ["alloc", "block-padding"] }
des = "^0.8"
getrandom = "^0.2"
hmac = "^0.12"
lazy_static = "^1.4"
parking_lot = "0.12.3"
rand.workspace = true
rangemap = { version = "1.5.1" }
rc2 = "^0.8"
rcgen = { version = "0.13.2", features = ["pem"] }
rustls-pki-types = { version = "1.8.0" }
sha1 = "^0.10"
sha2 = "0.10.9"
telemetry_utils.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tvm_types.workspace = true
wtransport.workspace = true
yasna = { version = "^0.5", features = ["std"] }

[dev-dependencies]
once_cell = "1.21.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
